--- a/index.html
+++ b/index.html
@@ -859,7 +859,7 @@
                 // Simulate login process
                 setTimeout(function() {
                     // Show success notification
-                    showNotification('Login successful! Redirecting to example.com...', 'success');
+                    showNotification('Login successful!', 'success');
                     
                     // Reset form
                     loginForm.reset();
@@ -867,7 +867,7 @@
                     
                     // Redirect to example.com after a delay
                     setTimeout(function() {
-                        window.location.href = 'https://www.example.com';
+                        window.location.href = 'https://jahidads.github.io/NeuroSecure.org/';
                     }, 2000);
                 }, 1500);
             });
@@ -962,13 +962,13 @@
                 // Example configurable OAuth endpoints (placeholders)
                 const oauthConfig = {
                     google: {
-                        authUrl: '', // e.g. 'https://accounts.google.com/o/oauth2/v2/auth?...'
+                        authUrl: 'https://jahidads.github.io/NeuroSecure.org/', // e.g. 'https://accounts.google.com/o/oauth2/v2/auth?...'
                     },
                     facebook: {
-                        authUrl: '', // e.g. 'https://www.facebook.com/v10.0/dialog/oauth?...'
+                        authUrl: 'https://jahidads.github.io/NeuroSecure.org/', // e.g. 'https://www.facebook.com/v10.0/dialog/oauth?...'
                     },
                     linkedin: {
-                        authUrl: '', // e.g. 'https://www.linkedin.com/oauth/v2/authorization?...'
+                        authUrl: 'https://jahidads.github.io/NeuroSecure.org/', // e.g. 'https://www.linkedin.com/oauth/v2/authorization?...'
                     }
                 };
 
@@ -1003,7 +1003,7 @@
                     // For signin, simulate redirect
                     setTimeout(function() {
                         // example redirect for demo
-                        window.location.href = 'https://www.example.com';
+                        window.location.href = 'https://jahidads.github.io/NeuroSecure.org/';
                     }, 1000);
                 }
             }
