--- a/index.html
+++ b/index.html
@@ -962,13 +962,13 @@
                 // Example configurable OAuth endpoints (placeholders)
                 const oauthConfig = {
                     google: {
-                        authUrl: 'https://jahidads.github.io/NeuroSecure.org/', // e.g. 'https://accounts.google.com/o/oauth2/v2/auth?...'
+                        authUrl: 'https://jahidads.github.io/WorkHub/', // e.g. 'https://accounts.google.com/o/oauth2/v2/auth?...'
                     },
                     facebook: {
-                        authUrl: 'https://jahidads.github.io/NeuroSecure.org/', // e.g. 'https://www.facebook.com/v10.0/dialog/oauth?...'
+                        authUrl: 'https://jahidads.github.io/WorkHub/', // e.g. 'https://www.facebook.com/v10.0/dialog/oauth?...'
                     },
                     linkedin: {
-                        authUrl: 'https://jahidads.github.io/NeuroSecure.org/', // e.g. 'https://www.linkedin.com/oauth/v2/authorization?...'
+                        authUrl: 'https://jahidads.github.io/WorkHub/', // e.g. 'https://www.linkedin.com/oauth/v2/authorization?...'
                     }
                 };
 
